feat(topology): add label to node restapi code
