# control-plane/rest/openapi-specs/v0_api_spec.yaml
@@ -319,6 +319,65 @@ paths:
           $ref: '#/components/responses/ServerError'
       security:
         - JWT: []
+  '/nodes/{id}/label/{label}':
+    put:
+      tags:
+        - Nodes
+      operationId: put_node_label
+      description: |-
+        Add labels to node.
+      parameters:
+        - in: path
+          name: id
+          required: true
+          schema:
+            type: string
+        - in: path
+          name: label
+          required: true
+          schema:
+            type: string
+      responses:
+        '200':
+          description: OK
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Node'
+        '4XX':
+          $ref: '#/components/responses/ClientError'
+        '5XX':
+          $ref: '#/components/responses/ServerError'
+      security:
+        - JWT: []
+    delete:
+      tags:
+        - Nodes
+      operationId: delete_node_label
+      parameters:
+        - in: path
+          name: id
+          required: true
+          schema:
+            type: string
+        - in: path
+          name: label
+          required: true
+          schema:
+            type: string
+      responses:
+        '200':
+          description: OK
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Node'
+        '4XX':
+          $ref: '#/components/responses/ClientError'
+        '5XX':
+          $ref: '#/components/responses/ServerError'
+      security:
+        - JWT: []
   '/nodes/{id}/nexuses':
     get:
       tags:
@@ -2635,6 +2694,9 @@ components:
           type: string
         id:
           description: node ID
+          $ref: '#/components/schemas/NodeId'
+        labels:
+          description: node Label
           $ref: '#/components/schemas/NodeId'
         cordondrainstate:
           description: the drain state
