# control-plane/rest/service/src/v0/nodes.rs
@@ -56,6 +56,20 @@ impl apis::actix_server::Nodes for RestApi {
         let node = client().drain(id.into(), label).await?;
         Ok(node.into())
     }
+
+    async fn put_node_label(
+        Path((id, label)): Path<(String, String)>,
+    ) -> Result<models::Node, RestError<RestJsonError>> {
+        let node = client().label(id.into(), label).await?;
+        Ok(node.into())
+    }
+
+    async fn delete_node_label(
+        Path((id, label)): Path<(String, String)>,
+    ) -> Result<models::Node, RestError<RestJsonError>> {
+        let node = client().unlabel(id.into(), label).await?;
+        Ok(node.into())
+    }
 }
 
 /// returns node from node option and returns an error on non existence
